--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -655,11 +655,11 @@ The TypeScript documentation highlights several reasons into the limitations and
     },
 ]`}</Rule>
 
-As rule of a thumb try to:
+As rule of a thumb, try to:
 
-- use literal type most frequently
-- const assertion arrays when there is a need to loop through the values
-- const assertion objects when there is a strong use case for it
+- Use literal types whenever possible.
+- Use const assertion arrays when you need to loop through the values.
+- Use const assertion objects when there is a strong use case for them.
 
 Literal type and const assertion examples:
 
