--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -663,10 +663,10 @@ As rule of a thumb, try to:
 
 Literal type and const assertion examples:
 
-- Use literal type majority of times and avoid creating run time objects that add up to the bundle size.
+- Use literal types whenever possible to avoid creating runtime objects that add to the bundle size.
 
   ```ts
-  // ❌ Avoid using enums adding up to the bundle size
+  // ❌ Avoid using enums as they increase the bundle size
   enum UserRole {
     GUEST = 'guest',
     MODERATOR = 'moderator',
@@ -682,15 +682,15 @@ Literal type and const assertion examples:
     UserRole['ADMINISTRATOR'] = 'administrator';
   })(UserRole || (UserRole = {}));
 
-  // ✅ Use literal type
+  // ✅ Use literal types
   type UserRole = 'guest' | 'moderator' | 'administrator';
 
   const isGuest = (role: UserRole) => role === 'guest';
   ```
 
-- Use const assertion arrays, when need to loop through the values.
+- Use const assertion arrays when you need to loop through the values.
 
-  ```ts
+  ```tsx
   // ❌ Avoid using enums
   enum UserRole {
     GUEST = 'guest',
@@ -698,7 +698,7 @@ Literal type and const assertion examples:
     ADMINISTRATOR = 'administrator',
   }
 
-  // ✅ Use const assertions array
+  // ✅ Use const assertions arrays
   const USER_ROLES = ['guest', 'moderator', 'administrator'] as const;
   type UserRole = (typeof USER_ROLES)[number];
 
@@ -721,7 +721,7 @@ Literal type and const assertion examples:
   const Item = ({ role }: { role: UserRole }) => {...
   ```
 
-- Use const assertion objects when there is a strong use case for it.
+- Use const assertion objects when there is a strong use case for them.
 
   ```ts
   // ❌ Avoid using enums
