--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -1171,7 +1171,7 @@ An exaggerated example where implementing 10 React components with 5 required pr
 
 ### Props as Discriminated Type
 
-When applicable use **discriminated type** to eliminate optional props, which will decrease complexity on component API and only required props will be passed depending on its use case.
+When applicable, use **discriminated types** to eliminate optional props. This approach reduces complexity in the component API and ensures that only the required props are passed based on the specific use case.
 
 ```ts
 // ❌ Avoid optional props as they increase complexity and ambiguity in component APIs
