--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -75,7 +75,7 @@ Being expressive and keeping types as **narrow as possible** brings benefits to 
 
 ### Type Inference
 
-As rule of thumb, explicitly declare a type when it help narrows it.
+As a rule of thumb, explicitly declare a type when it helps narrow it.
 
 <Note>
   Just because you don't need to add types, doesn't mean you shouldn't. In some cases explicit type declaration can
