--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -78,8 +78,8 @@ Being expressive and keeping types as **narrow as possible** brings benefits to 
 As a rule of thumb, explicitly declare a type when it helps narrow it.
 
 <Note>
-  Just because you don't need to add types, doesn't mean you shouldn't. In some cases explicit type declaration can
-  increase code readability and intent.
+  Just because you don't need to add types doesn't mean you shouldn't. In some cases, explicitly declaring types can
+  improve code readability and clarify intent.
 </Note>
 
 ```ts
