--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -83,27 +83,27 @@ As a rule of thumb, explicitly declare a type when it helps narrow it.
 </Note>
 
 ```ts
-// ❌ Avoid - Don't explicitly declare a type, it can be inferred.
-const userRole: string = 'admin'; // Type 'string'
-const employees = new Map<string, number>([['Gabriel', 32]]);
-const [isActive, setIsActive] = useState<boolean>(false);
+// ❌ Avoid - Don't explicitly declare types when they can be inferred.
+const userRole: string = 'admin'; // Inferred as wide type 'string'
+const employees = new Map<string, number>([['Gabriel', 32]]); // Redundant type declaration
+const [isActive, setIsActive] = useState<boolean>(false); // Redundant, inferred as 'boolean'
 
 // ✅ Use type inference.
-const USER_ROLE = 'admin'; // Type 'admin'
-const employees = new Map([['Gabriel', 32]]); // Type 'Map<string, number>'
-const [isActive, setIsActive] = useState(false); // Type 'boolean'
+const USER_ROLE = 'admin'; // Inferred as narrowed string literal type 'admin'
+const employees = new Map([['Gabriel', 32]]); // Inferred as 'Map<string, number>'
+const [isActive, setIsActive] = useState(false); // Inferred as 'boolean'
 
-// ❌ Avoid - Don't infer a (wide) type, it can be narrowed.
-const employees = new Map(); // Type 'Map<any, any>'
+// ❌ Avoid - Don't infer a wide types when they can be narrowed.
+const employees = new Map(); // Inferred as wide type 'Map<any, any>'
 employees.set('Lea', 17);
 type UserRole = 'admin' | 'guest';
-const [userRole, setUserRole] = useState('admin'); // Type 'string'
+const [userRole, setUserRole] = useState('admin'); // Inferred as 'string', not the desired narrowed literal type
 
 // ✅ Use explicit type declaration to narrow the type.
-const employees = new Map<string, number>(); // Type 'Map<string, number>'
+const employees = new Map<string, number>(); // Explicitly narrowed to 'Map<string, number>'
 employees.set('Gabriel', 32);
 type UserRole = 'admin' | 'guest';
-const [userRole, setUserRole] = useState<UserRole>('admin'); // Type 'UserRole'
+const [userRole, setUserRole] = useState<UserRole>('admin'); // Explicit type 'UserRole'
 ```
 
 ### Data Immutability
