--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -351,7 +351,7 @@ Template literal types are useful in various scenarios, such as:
 ### Return Types
 
 <Rule
-  prefix="Including return type annotations is highly encouraged, although not required"
+  prefix="Explicitly defining the return type of a function is encouraged, although not required"
   href="https://typescript-eslint.io/rules/explicit-function-return-type/"
 >{`"@typescript-eslint/explicit-function-return-type": "error"`}</Rule>
 
