--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -348,22 +348,6 @@ Template literal types are useful in various scenarios, such as:
   const customColor: Color = '#AD3128';
   ```
 
-### Return Types
-
-<Rule
-  prefix="Explicitly defining the return type of a function is encouraged, although not required"
-  href="https://typescript-eslint.io/rules/explicit-function-return-type/"
->{`"@typescript-eslint/explicit-function-return-type": "error"`}</Rule>
-
-Consider benefits when explicitly typing the return value of a function:
-
-- Return values makes it clear and easy to understand to any calling code what type is returned.
-- In the case where there is no return value, the calling code doesn't try to use the undefined value when it shouldn't.
-- Surface potential type errors faster in the future if there are code changes that change the return type of the function.
-- Easier to refactor, since it ensures that the return value is assigned to a variable of the correct type.
-- Similar to writing tests before implementation (TDD), defining function arguments and return type, gives you the opportunity to discuss the feature functionality and its interface ahead of implementation.
-- Although type inference is very convenient, adding return types can save TypeScript compiler a lot of work.
-
 ### Type any & unknown
 
 `any` data type must not be used as it represents literally “any” value that TypeScript defaults to and skips type checking since it cannot infer the type. As such, `any` is dangerous, it can mask severe programming errors.
@@ -613,6 +597,22 @@ type StatusParams = StatusSuccessParams | StatusLoadingParams | StatusErrorParam
 
 export const parseStatus = (params: StatusParams) => {...
 ```
+
+### Function Return Types
+
+<Rule
+  prefix="Explicitly defining the return type of a function is encouraged, although not required"
+  href="https://typescript-eslint.io/rules/explicit-function-return-type/"
+>{`"@typescript-eslint/explicit-function-return-type": "error"`}</Rule>
+
+Consider benefits when explicitly typing the return value of a function:
+
+- Return values makes it clear and easy to understand to any calling code what type is returned.
+- In the case where there is no return value, the calling code doesn't try to use the undefined value when it shouldn't.
+- Surface potential type errors faster in the future if there are code changes that change the return type of the function.
+- Easier to refactor, since it ensures that the return value is assigned to a variable of the correct type.
+- Similar to writing tests before implementation (TDD), defining function arguments and return type, gives you the opportunity to discuss the feature functionality and its interface ahead of implementation.
+- Although type inference is very convenient, adding return types can save TypeScript compiler a lot of work.
 
 ## Variables
 
