--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -598,7 +598,7 @@ type StatusParams = StatusSuccessParams | StatusLoadingParams | StatusErrorParam
 export const parseStatus = (params: StatusParams) => {...
 ```
 
-### Function Return Types
+### Return Types
 
 <Rule
   prefix="Explicitly defining the return type of a function is encouraged, although not required"
