--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -605,7 +605,7 @@ export const parseStatus = (params: StatusParams) => {...
   href="https://typescript-eslint.io/rules/explicit-function-return-type/"
 >{`"@typescript-eslint/explicit-function-return-type": "error"`}</Rule>
 
-Consider some of the advantages when explicitly typing the return value of a function:
+Consider the advantages of explicitly defining the return type of a function::
 
 - Return values makes it clear and easy to understand to any calling code what type is returned.
 - In the case where there is no return value, the calling code doesn't try to use the undefined value when it shouldn't.
