--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -23,7 +23,7 @@ The TypeScript Style Guide provides a concise set of conventions and best practi
 
 ### What
 
-Since "consistency is the key", TypeScript Style Guide strives to enforce majority of the rules by using automated tooling as ESLint, TypeScript, Prettier, etc.  
+Since "consistency is the key", TypeScript Style Guide strives to enforce most rules using automated tools such as ESLint, TypeScript, Prettier, etc.
 Still certain design and architectural decisions must be followed which are described with conventions below.
 
 ### Why
