--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -24,7 +24,7 @@ The TypeScript Style Guide provides a concise set of conventions and best practi
 ### What
 
 Since "consistency is the key", TypeScript Style Guide strives to enforce the majority of rules using automated tools such as ESLint, TypeScript, Prettier, etc.
-However, certain design and architectural decisions must be followed, as described in the conventions below.
+However, certain design and architectural decisions must still be followed, as described in the conventions below.
 
 ### Why
 
