--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -29,7 +29,7 @@ However, certain design and architectural decisions must still be followed, as d
 ### Why
 
 - As project grow in size and complexity, maintaining code quality and ensuring consistent practices become increasingly challenging.
-- Defining and following a standard way to write TypeScript applications brings a consistent codebase and faster development cycles.
+- Defining and following a standard approach to writing TypeScript applications leads to a consistent codebase and faster development cycles.
 - No need to discuss code styles in code reviews.
 - Saves team time and energy.
 
