--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -30,7 +30,7 @@ However, certain design and architectural decisions must still be followed, as d
 
 - As project grow in size and complexity, maintaining code quality and ensuring consistent practices become increasingly challenging.
 - Defining and following a standard approach to writing TypeScript applications leads to a consistent codebase and faster development cycles.
-- No need to discuss code styles in code reviews.
+- No need to discuss code styles during code reviews.
 - Saves team time and energy.
 
 ### Disclaimer
