--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -35,7 +35,7 @@ However, certain design and architectural decisions must still be followed, as d
 
 ### Disclaimer
 
-As any code style guide is opinionated, this is no different as it tries to set conventions (sometimes arbitrary) that govern our code.
+Like any code style guide, this one is opinionated, setting conventions (sometimes arbitrary) to govern our code.
 
 You don't have to follow every convention exactly as written in the guide, decide what works best for your product and team to stay consistent with your codebase.
 
