--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -37,7 +37,7 @@ However, certain design and architectural decisions must still be followed, as d
 
 Like any code style guide, this one is opinionated, setting conventions (sometimes arbitrary) to govern our code.
 
-You don't have to follow every convention exactly as written in the guide, decide what works best for your product and team to stay consistent with your codebase.
+You don't have to follow every convention exactly as written, decide what works best for your product and team to maintain consistency in your codebase.
 
 ### Requirements
 
