--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: TypeScript Style Guide
-description: The TypeScript Style Guide provides a concise set of conventions and best practices for creating consistent, maintainable code.
+description: TypeScript Style Guide provides a concise set of conventions and best practices for creating consistent, maintainable code.
 toc_min_heading_level: 2
 toc_max_heading_level: 2
 ---
@@ -13,7 +13,7 @@ import { UseDocumentTitle } from '@site/src/hooks';
 
 ## Introduction
 
-The TypeScript Style Guide provides a concise set of conventions and best practices for creating consistent, maintainable code.
+TypeScript Style Guide provides a concise set of conventions and best practices for creating consistent, maintainable code.
 
 ## Table of Contents
 
