--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -41,12 +41,12 @@ You don't have to follow every convention exactly as written, decide what works 
 
 ### Requirements
 
-Style Guide requires you to use:
+This Style Guide requires the use of:
 
 - [TypeScript v5](https://github.com/microsoft/TypeScript)
 - [typescript-eslint v7](https://github.com/typescript-eslint/typescript-eslint) with [`strict-type-checked`](https://typescript-eslint.io/linting/configs/#strict-type-checked) configuration enabled.
 
-Style Guide assumes using, but is not limited to:
+The Style Guide assumes the use of, but is not limited to:
 
 - [React](https://github.com/facebook/react) as UI library for frontend conventions.
 - [Playwright](https://playwright.dev/) and [Vitest](https://vitest.dev/) for testing conventions.
