--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -65,7 +65,7 @@ The Style Guide assumes the use of, but is not limited to:
 
 ## Types
 
-When creating types we try to think of how they would best **describe our code**.  
+When creating types, consider how they would best **describe our code**.  
 Being expressive and keeping types as **narrow as possible** brings benefits to the codebase:
 
 - Increased Type Safety - Catch errors at compile-time, since narrowed types provide more specific information about the shape and behavior of your data.
