--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -66,7 +66,7 @@ The Style Guide assumes the use of, but is not limited to:
 ## Types
 
 When creating types, consider how they would best **describe our code**.  
-Being expressive and keeping types as **narrow as possible** brings benefits to the codebase:
+Being expressive and keeping types as **narrow as possible** offers several benefits to the codebase:
 
 - Increased Type Safety - Catch errors at compile-time, since narrowed types provide more specific information about the shape and behavior of your data.
 - Improved Code Clarity - Cognitive load is reduced by providing clearer boundaries and constraints on your data which makes your code easier to understand by other developers.
