--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -68,9 +68,9 @@ The Style Guide assumes the use of, but is not limited to:
 When creating types, consider how they would best **describe our code**.  
 Being expressive and keeping types as **narrow as possible** offers several benefits to the codebase:
 
-- Increased Type Safety - Catch errors at compile-time, since narrowed types provide more specific information about the shape and behavior of your data.
-- Improved Code Clarity - Cognitive load is reduced by providing clearer boundaries and constraints on your data which makes your code easier to understand by other developers.
-- Easier Refactoring - Refactor with confidence, since types are narrow, making changes to your code becomes less risky.
+- Increased Type Safety - Catch errors at compile time, as narrowed types provide more specific information about the shape and behavior of your data.
+- Improved Code Clarity - Reduces cognitive load by providing clearer boundaries and constraints on your data, making your code easier for other developers to understand.
+- Easier Refactoring - With narrower types, making changes to your code becomes less risky, allowing you to refactor with confidence.
 - Optimized Performance - In some cases, narrow types can help the TypeScript compiler generate more optimized JavaScript code.
 
 ### Type Inference
