--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -114,7 +114,7 @@ const [isActive, setIsActive] = useState(false); // Inferred as 'boolean'
 
 ### Data Immutability
 
-Immutability should be a key principle. Wherever possible, data should be immutable, leveraging types like `Readonly` and `ReadonlyArray`.
+Immutability should be a key principle. Wherever possible, data should remain immutable, leveraging types like `Readonly` and `ReadonlyArray`.
 
 Using readonly type prevents accidental data mutations and reduces the risk of bugs caused by unintended side effects.
 
