--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -116,7 +116,7 @@ const [isActive, setIsActive] = useState(false); // Inferred as 'boolean'
 
 Immutability should be a key principle. Wherever possible, data should remain immutable, leveraging types like `Readonly` and `ReadonlyArray`.
 
-Using readonly type prevents accidental data mutations and reduces the risk of bugs caused by unintended side effects.
+Using readonly types prevents accidental data mutations and reduces the risk of bugs caused by unintended side effects. This ensures that data integrity is maintained throughout the application lifecycle.
 
 When performing data processing always return new array, object etc. To minimize cognitive load for future developers, aim to keep data objects flat and small.  
 Mutations should be used sparingly and only as an exception in cases where they are truly necessary, such as when dealing with complex objects, performance-related reasons etc.
