--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -116,10 +116,9 @@ const [isActive, setIsActive] = useState(false); // Inferred as 'boolean'
 
 Immutability should be a key principle. Wherever possible, data should remain immutable, leveraging types like `Readonly` and `ReadonlyArray`.
 
-Using readonly types prevents accidental data mutations and reduces the risk of bugs caused by unintended side effects. This ensures that data integrity is maintained throughout the application lifecycle.
-
-When performing data processing, always return new arrays, objects, or other reference-based data structures. To minimize cognitive load for future developers, strive to keep data objects flat and concise.
-Mutations should be used sparingly and only as a last resort, in cases where they are truly necessary, such as when dealing with complex objects or optimizing for performance.
+- Using readonly types prevents accidental data mutations and reduces the risk of bugs caused by unintended side effects. This ensures that data integrity is maintained throughout the application lifecycle.
+- When performing data processing, always return new arrays, objects, or other reference-based data structures. To minimize cognitive load for future developers, strive to keep data objects flat and concise.
+- Mutations should be used sparingly, in cases where they are truly necessary, such as when dealing with complex objects or optimizing for performance.
 
 ```ts
 // ❌ Avoid data mutations
