--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -310,7 +310,7 @@ Adopting template literal types brings several advantages:
 
 Template literal types have many practical use cases, such as defining API endpoints, routes, internationalization, database queries, CSS typings etc.
 
-Template literal types are useful in various scenarios, such as:
+Template literal types are useful in various practical scenarios, such as:
 
 - API Endpoints - Use template literal types to restrict values to valid API routes.
 
