--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -703,7 +703,7 @@ As rule of a thumb, try to:
 - Use const assertion arrays when you need to loop through the values.
 - Use const assertion objects when there is a strong use case for them.
 
-Literal type and const assertion examples:
+Examples:
 
 - Use literal types whenever possible to avoid creating runtime objects that add to the bundle size.
 
