--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -642,6 +642,8 @@ Constants are used to represent values that are not meant to change, ensuring re
 - Type Narrowing - Using `as const` ensures that literal values (e.g., numbers, strings) are treated as exact values instead of generalized types like `number` or `string`.
 - Immutability - Objects and arrays get readonly properties, preventing accidental mutations.
 
+Examples:
+
 - Objects
 
   ```ts
